apps/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: homelab-tunnel.brent.systems
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: &host www.brent.systems
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: blog
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: blog-tls-certificate
